--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "id": "skype-next",
   "name": "Skype",
   "version": "1.0.0",
-  "description": "skype custom | 2019-06-11 supported new schema",
+  "description": "skype custom | 2019-06-11 supported multi-language schema",
   "main": "index.js",
   "author": "Taka",
   "license": "MIT",
